theme/src/css/main/content-elements/site-header.css
/* ... */
.dropdown-divider {
  height: 0;
  margin: 0.5rem 0;
  overflow: hidden;
  border-top: 1px solid #e9ecef;
}

.main-navigation__dropdown-item-link {
  display: block;
  width: 100%;
  padding: var(--t3-ce-header-nav-dropdown-item-padding-top) var(--t3-ce-header-nav-dropdown-item-padding-left);
  clear: both;
  font-weight: 400;
  color: var(--t3-ce-header-nav-dropdown-color);
  text-align: inherit;
  text-decoration: none;
  background-color: transparent;
  border: 0;
}

.show-parent-link .main-navigation__dropdown-item-link {
  padding-left: calc(var(--t3-ce-header-nav-dropdown-item-padding-left) + 0.8rem);
}

.show-parent-link .main-navigation__dropdown-item-parent-link {
  padding-left: var(--t3-ce-header-nav-dropdown-item-padding-left);
  margin-bottom: 0.6rem;
  font-size: calc(var(--t3-ce-header-nav-font-size) + 0.05rem);
}

.main-navigation__dropdown-item-link:hover,
.main-navigation__dropdown-item-link:focus {
  color: var(--t3-ce-header-nav-dropdown-item-hover-color);
  background-color: var(--t3-ce-header-nav-dropdown-item-hover-bg);
}

.main-navigation__dropdown-item.active,
.main-navigation__dropdown-item-link.active,
.main-navigation__dropdown-item-link:active {
  color: var(--t3-ce-header-nav-dropdown-item-active-color);
  background-color: var(--t3-ce-header-nav-dropdown-item-active-bg);
}

.main-navigation__dropdown-item-list.show {
  display: block;
}

.header.site-header.sticky-header {
  position: sticky; /* stylelint-disable-line */
  top: 0;
  z-index: 1;
}

.big-menu-wrp {
  position: static;
}

.ce-site-header__top-langmenu .main-flag-language-icon {
  display: none;
}

.ce-site-header__langmenu-wrp.inside .main-flag-language-icon {
  display: none;
}

.ce-site-header__langmenu-wrp.outside .main-flag-language-icon {
  display: block;
}

.ce-site-header__langmenu-wrp.outside .main-flag-language {
  display: none;
}

.mobile-menu-toggler {
  float: right;
  transform: rotate(0deg);
  transition: 0.2s;
  position: absolute;
  right: 0;
  top: 0;
  padding: 0 20px;
  color: var(--t3-ce-header-nav-color);
}

.mobile-menu-toggler:hover {
  color: var(--t3-ce-header-nav-hover-color);
}

.mobile-menu-toggler:not(.collapsed) {
  transform: rotate(45deg);
  transition: 0.2s;
}

.big-menu-dropdown.show {
  width: 100%;
  margin: 0 auto;
  right: 0;
  padding: 18px 0;
  border-top: 1px solid var(--t3-gray-60);
  border-left: 1px solid var(--t3-ce-header-nav-dropdown-bg);
  border-right: 1px solid var(--t3-ce-header-nav-dropdown-bg);
}

.big-menu-dropdown .main-navigation__dropdown-item-parent-link {
  font-size: calc(var(--t3-ce-header-nav-font-size) + 0.1rem);
  color: var(--t3-ce-header-nav-dropdown-color);
}

.main-navigation__big-dropdown-item-list._sub-menu-level-2,
.main-navigation__big-dropdown-item-list._sub-menu-level-3 {
  padding-left: 0;
  list-style: none;
}

.main-navigation__dropdown-item-wrp {
  position: relative;
}

.main-navigation__dropdown-item-wrp.active .main-navigation__dropdown-item-parent-link {
  color: var(--t3-ce-header-nav-active-color);
  background-color: var(--t3-ce-header-nav-active-bg);
}

.ce-site-header__top-wrp {
  background: var(--t3-ce-header-top-bg);
}

.ce-site-header__top {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.ce-site-header__top-meta-menu .ce-site-header__top-meta-menu-list {
  flex-direction: row;
}

.ce-site-header__top-meta-menu .ce-site-header__top-meta-menu-list-item-link {
  padding: 0.6rem 1rem;
  color: var(--t3-ce-header-top-color);
}

.ce-site-header__top .main-navigation__item-link:hover,
.ce-site-header__top .main-navigation__item-link:focus {
  color: var(--t3-ce-header-top-hover-color);
  background-color: var(--t3-ce-header-top-hover-bg);
}

.ce-site-header__top .main-navigation__list .show > .main-navigation__item-link,
.ce-site-header__top .main-navigation__list .active > .main-navigation__item-link,
.ce-site-header__top .main-navigation__item-link.show,
.ce-site-header__top .main-navigation__item-link.active {
  color: var(--t3-ce-header-top-active-color);
  background-color: var(--t3-ce-header-top-active-bg);
}

.main-navigation__items-wrp.show .main-navigation__list.sticky-menu {
  max-height: 70vh;
  overflow: auto;
  min-height: 100%;
}

.main-navigation__langmenu-search-wrp {
  display: flex;
  flex-direction: row;
  list-style: none;
  align-items: center;
}

.ce-site-header__langmenu,
.ce-site-header__top-langmenu {
  list-style: none;
  margin: 0;
  padding: 0;
}

.ce-site-header__language-menu-link {
  text-decoration: none;
  text-transform: uppercase;
  display: flex;
  align-items: center;
}

.ce-site-header__top-langmenu .ce-site-header__language-menu-link {
  color: var(--t3-ce-header-top-color);
}

.ce-site-header__langmenu .ce-site-header__language-menu-link {
  color: var(--t3-ce-header-nav-color);
}

.ce-site-header__langmenu .ce-site-header__language-menu-box {
  text-align: right;
}

.ce-site-header__langmenu .ce-site-header__language-menu-box li {
  display: inline-block;
}

.ce-site-header__top-langmenu .ce-site-header__language-menu-box {
  position: absolute;
  z-index: 2;
  display: none;
  right: 0;
  left: auto;
  width: auto;
}

.ce-site-header__language-menu-box-content {
  background-color: var(--t3-ce-lang-menu-bg);
}

.ce-site-header__language-menu-box-content-list {
  margin-bottom: 0;
  padding: 1rem 2rem;
  list-style: none;
}

.ce-site-header__language-menu-box-item {
  color: var(--t3-ce-lang-menu-color);
}

.ce-site-header__language-menu-box-item:hover {
  color: var(--t3-ce-lang-menu-hover-color);
}

.ce-site-header__language-menu-box.show {
  display: block;
}

.ce-site-header__language-menu-box {
  position: absolute;
  z-index: 2;
  display: none;
  background-color: var(--t3-ce-lang-menu-bg);
  left: 0;
  right: 0;
  top: 100%;
  border-bottom: 1px solid var(--t3-gray-80);
}

.ce-site-header__search-icon {
  color: var(--t3-ce-header-nav-color);
}
/* ... */

